syntax = "proto3";

package template;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";

// Defines the import path that should be used to import the generated package
// and the package name
option go_package = "github.com/Elderly-AI/ta_eos/proto/template;template";


service Template {
  rpc GetKrHandler (KrRequest) returns (OkMessage) {
    option (google.api.http) = {
      post: "/api/v1/template/get_kr"
      body: "*"
    };
  }
  rpc ApproveKrHandler (KrRequest) returns (OkMessage) {
    option (google.api.http) = {
      post: "/api/v1/template/approve_kr"
      body: "*"
    };
  }
}


message MapMessage{
  map<string, google.protobuf.Any> data = 1;
}

message KrRequest {
  string kr_name = 1;
  MapMessage data = 2;
}

message OkMessage {
  bool ok = 1;
  string error = 2;
}



